@startuml

' ============================================================
' ESTILOS GENERALES — STATE DIAGRAM SIGA
' ============================================================

!theme plain

' --- Renderizado y geometría general ---
skinparam dpi 300
skinparam shadowing false
skinparam roundcorner 10
skinparam padding 6
skinparam nodesep 55
skinparam ranksep 45

' --- Tipografía general ---
skinparam defaultFontName "Inter", "Segoe UI", "Helvetica", Arial, sans-serif
skinparam defaultFontSize 12
skinparam defaultFontColor #1E293B

' --- Fondo ---
skinparam BackgroundColor #FFFFFF

' ============================================================
' TÍTULO
' ============================================================

skinparam title {
    FontSize 15
    FontStyle bold
    FontColor #0F172A
    BorderColor transparent
    BackgroundColor transparent
}

' ============================================================
' TRANSICIONES / FLECHAS
' ============================================================

skinparam ArrowColor #64748B
skinparam ArrowFontColor #334155
skinparam ArrowFontSize 11
skinparam ArrowThickness 1.2

' ============================================================
' ESTADOS — ESTILO BASE
' ============================================================

skinparam state {
    BackgroundColor #F8FAFC
    BorderColor #94A3B8
    BorderThickness 1.5
    FontColor #0F172A
    FontSize 12
    FontStyle bold

    StartColor #0EA5E9
    EndColor #64748B
}

' ============================================================
' ESTADOS — PALETA SEMÁNTICA
' ============================================================

' Estado inicial / borrador
skinparam state<<draft>> {
    BackgroundColor #EFF6FF
    BorderColor #3B82F6
    FontColor #1D4ED8
}

' Estado pendiente / espera
skinparam state<<pending>> {
    BackgroundColor #FFFBEB
    BorderColor #F59E0B
    FontColor #B45309
}

' Estado autorizado / validado
skinparam state<<authorized>> {
    BackgroundColor #EEF2FF
    BorderColor #6366F1
    FontColor #4338CA
}

' Estado exitoso / confirmado
skinparam state<<success>> {
    BackgroundColor #ECFDF5
    BorderColor #10B981
    FontColor #047857
}

' Estado cancelado / neutral
skinparam state<<cancelled>> {
    BackgroundColor #F1F5F9
    BorderColor #94A3B8
    FontColor #64748B
}

' Estado rechazado / error
skinparam state<<rejected>> {
    BackgroundColor #FEF2F2
    BorderColor #EF4444
    FontColor #B91C1C
}

' ============================================================
' NOTAS
' ============================================================

skinparam Note {
    BackgroundColor #FEFCE8
    BorderColor #FACC15
    BorderThickness 1
    FontColor #713F12
    FontSize 11
    RoundCorner 8
}

' ============================================================
' LÓGICA DEL DIAGRAMA DE MOVIMIENTO
' ============================================================

title STATE-01 — Máquina de estados canónica de Movimiento

' Declaración de estados con sus respectivos estilos semánticos
state DRAFT <<draft>>
state PENDING_AUTHORIZATION <<pending>>
state AUTHORIZED <<authorized>>
state CONFIRMED <<success>>
state CANCELLED <<cancelled>>
state REJECTED <<rejected>>

' Transiciones
[*] --> DRAFT : create
DRAFT --> PENDING_AUTHORIZATION : submit [sensitive]
DRAFT --> CONFIRMED : confirm [not sensitive + valid]\nACID commit
DRAFT --> CANCELLED : cancel draft
PENDING_AUTHORIZATION --> AUTHORIZED : authorize [permission + recent step-up]
PENDING_AUTHORIZATION --> REJECTED : reject
PENDING_AUTHORIZATION --> CANCELLED : cancel [policy]
AUTHORIZED --> CONFIRMED : confirm [revalidate]\nACID commit
AUTHORIZED --> CANCELLED : cancel before commit [policy]
CONFIRMED --> [*]
REJECTED --> [*]
CANCELLED --> [*]

' Notas
note right of CONFIRMED
CONFIRMED is immutable.
Corrections are compensating movements; historical rows are never edited.
end note

note bottom of PENDING_AUTHORIZATION
Authorization does not reserve or decrement stock.
Confirmation revalidates stock, lot, asset and location under row locks.
UI translates states to Spanish.
end note

@enduml